--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/react-webcam": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.9.4",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-webcam": "^7.2.0",
     "tailwind-merge": "^3.2.0",
     "zustand": "^5.0.3"
