--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-webcam": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dom-to-image-more": "^3.5.0",
     "framer-motion": "^12.9.4",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.503.0",
